Long titles for study title, lead and role are now truncated. Hovers with full titles were added (https://github.com/OHDSI/ArachneUI/issues/841)

--- a/src/components/TitleStudy/style.scss
+++ b/src/components/TitleStudy/style.scss
@@ -27,6 +27,10 @@
   &title-study {
     align-items: center;
     display: flex;
+
+    &--nooverflow {
+      overflow: hidden;
+    }
     
     &--nowrap {
       & .#{$namespace}title-study__title {
